[package]
authors = ["Solana Maintainers <maintainers@solana.foundation>"]
description = "Solana Program Test Framework"
edition = "2021"
license = "Apache-2.0"
name = "solana-program-test"
repository = "https://github.com/solana-labs/solana"
version = "1.15.0"

[dependencies]
assert_matches = "1.5.0"
async-trait = "0.1.57"
base64 = "0.13.0"
bincode = "1.3.3"
borsh = "0.9.3"
chrono-humanize = "0.2.1"
crossbeam-channel = "0.5"
log = "0.4.17"
serde = "1.0.144"
solana-bpf-loader-program =  "1.14.9"
solana-logger = "1.14.9"
solana-program-runtime = "1.14.9"
solana-runtime = "1.14.9"
solana-client = "1.14.9"
solana-send-transaction-service = "1.14.9"
solana-sdk = "1.14.9"
solana-vote-program = "1.14.9"
futures = "0.3.25"
thiserror = "1.0"
tokio = { version = "1", features = ["full"] }
lazy_static = "1.1.1"
itertools = "0.10.5"
tarpc = {version = "0.29.0", features = ["full"] }
tokio-serde = {version = "0.8", features = ["bincode"]}
